--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.atyantik.com/clean-code-practices-javascript/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tirthbodawala">tirthbodawala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:31:06 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    12.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176522">Open Source vs. Closed Source?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -246,6 +226,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177791">Why Uber Engineering Switched from Postgres to MySQL</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://ubere.ng/2BuJF1N">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pushkargaikwad">pushkargaikwad</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:59:59 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    9.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176274">What It’s Like When Elon Musk’s Twitter Mob Comes After You</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -286,13 +286,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177791">Why Uber Engineering Switched from Postgres to MySQL</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176889">Papua New Guinea bans Facebook for a month to root out 'fake users'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ubere.ng/2BuJF1N">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pushkargaikwad">pushkargaikwad</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:59:59 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theguardian.com/world/2018/may/29/papua-new-guinea-facebook-ban-study-fake-users">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:21:06 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
                                     8.0 points
                                 </span>
@@ -406,13 +406,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176889">Papua New Guinea bans Facebook for a month to root out 'fake users'</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177442">Unsupervised Predictive Memory in a Goal-Directed Agent</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/world/2018/may/29/papua-new-guinea-facebook-ban-study-fake-users">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:06 &nbsp;•&nbsp;
+                                    <a class="node" href="https://arxiv.org/abs/1803.10760">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=albertzeyer">albertzeyer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 08:47:16 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     6.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:10:03.524949</strong>
+            <strong>Last update at 2018-05-29 13:20:03.380866</strong>
         </div>
     </div>
 </div>
