--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -226,26 +226,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    20.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17174279">Announcing the deprecation of GitHub Services</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -274,6 +254,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=protomyth">protomyth</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:22:26 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
+                                    20.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     19.0 points
                                 </span>
                             </td>
@@ -366,14 +366,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176889">Papua New Guinea bans Facebook for a month to root out 'fake users'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theguardian.com/world/2018/may/29/papua-new-guinea-facebook-ban-study-fake-users">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:21:06 &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
                                     17.0 points
                                 </span>
                             </td>
@@ -493,7 +493,7 @@
                                     <a class="node" href="https://gist.github.com/zero-master/57ce7f5091503ca637747df5ba4fe71d">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=xstartup">xstartup</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 18:16:43 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
+                                    55 comments &nbsp;•&nbsp;
                                     13.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:40:03.406874</strong>
+            <strong>Last update at 2018-05-29 13:50:03.552217</strong>
         </div>
     </div>
 </div>
