--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
-                                    23 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lpolovets">lpolovets</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:34:29 &nbsp;•&nbsp;
+                                    20 comments &nbsp;•&nbsp;
                                     126.0 points
                                 </span>
                             </td>
@@ -215,26 +215,6 @@
                                     2018-05-27 12:17:18 &nbsp;•&nbsp;
                                     108 comments &nbsp;•&nbsp;
                                     125.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lpolovets">lpolovets</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:34:29 &nbsp;•&nbsp;
-                                    20 comments &nbsp;•&nbsp;
-                                    124.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +353,7 @@
                                     <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 08:04:50 &nbsp;•&nbsp;
-                                    97 comments &nbsp;•&nbsp;
+                                    98 comments &nbsp;•&nbsp;
                                     115.0 points
                                 </span>
                             </td>
@@ -514,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
                                     85 comments &nbsp;•&nbsp;
-                                    102.0 points
+                                    103.0 points
                                 </span>
                             </td>
                         </tr>
@@ -555,6 +535,26 @@
                                     2018-05-26 14:02:42 &nbsp;•&nbsp;
                                     52 comments &nbsp;•&nbsp;
                                     102.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    20 comments &nbsp;•&nbsp;
+                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 13:40:03.406874</strong>
+            <strong>Last update at 2018-05-29 13:50:03.552217</strong>
         </div>
     </div>
 </div>
