--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -186,26 +186,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176889">Papua New Guinea bans Facebook for a month to root out 'fake users'</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/world/2018/may/29/papua-new-guinea-facebook-ban-study-fake-users">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:06 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    22.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17174279">Announcing the deprecation of GitHub Services</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177442">Unsupervised Predictive Memory in a Goal-Directed Agent</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://arxiv.org/abs/1803.10760">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=albertzeyer">albertzeyer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 08:47:16 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    12.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 14:10:03.530542</strong>
+            <strong>Last update at 2018-05-29 14:20:03.487210</strong>
         </div>
     </div>
 </div>
