--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175848">AI better at finding skin cancer than doctors</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.yahoo.com/news/ai-better-finding-skin-cancer-doctors-study-230756918.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 01:43:09 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    9.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17178907">Next-gen technology elevates retail experiences and pop-up shops</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -255,6 +235,26 @@
                                     2018-05-28 16:03:31 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
                                     8.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17179290">Snips AIR: an open source, private, blockchain-based alternative to Amazon Echo</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://vimeo.com/271650312">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mfester">mfester</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:09:59 &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
+                                    7.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 14:30:03.549245</strong>
+            <strong>Last update at 2018-05-29 14:40:04.343630</strong>
         </div>
     </div>
 </div>
