--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178192">Middle name initials enhance evaluations of intellectual performance (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    39 comments &nbsp;•&nbsp;
-                                    95.0 points
+                                    <a class="node" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2026">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmichulke">dmichulke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 11:40:32 &nbsp;•&nbsp;
+                                    58 comments &nbsp;•&nbsp;
+                                    101.0 points
                                 </span>
                             </td>
                         </tr>
@@ -213,8 +213,8 @@
                                     <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    42 comments &nbsp;•&nbsp;
-                                    88.0 points
+                                    43 comments &nbsp;•&nbsp;
+                                    89.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 06:21:06 &nbsp;•&nbsp;
                                     6 comments &nbsp;•&nbsp;
-                                    34.0 points
+                                    37.0 points
                                 </span>
                             </td>
                         </tr>
@@ -426,6 +426,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    26.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172833">I spent 16 months on this Bitcoin explainer. by Art of the Problem</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -466,14 +486,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177865">Challenges in Large FPGA-Based Logic Emulation Systems</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://dl.acm.org/citation.cfm?id=3177542">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:18:31 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
+                                    17 comments &nbsp;•&nbsp;
                                     24.0 points
                                 </span>
                             </td>
@@ -486,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17179099">How gender bias affects healthcare</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
-                                    24.0 points
+                                    <a class="node" href="http://www.bbc.com/future/story/20180523-how-gender-bias-affects-your-healthcare">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kunkurus">kunkurus</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:49:09 &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
+                                    23.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,26 +555,6 @@
                                     2018-05-28 19:25:34 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
                                     22.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179099">How gender bias affects healthcare</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/future/story/20180523-how-gender-bias-affects-your-healthcare">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kunkurus">kunkurus</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 13:49:09 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
-                                    19.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 14:50:03.545114</strong>
+            <strong>Last update at 2018-05-29 15:00:03.753258</strong>
         </div>
     </div>
 </div>
